--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </div>
         <div id="bottom">
           <div id="confirm">
-            <span id="text"> are you sure </span>
+            <span id="text">are you sure?</span>
             <div id="buttons"><button id="yea">yea</button><button id="no">no</button></div>
           </div>
           <button title="Clear" class="tool" id="trash"></button>
@@ -46,7 +46,10 @@
           <button title="Download" class="tool" id="download"></button>
         </div>
         <textarea placeholder="your message to be... or not" id="area"></textarea>
-        <button class="tool" id="b-decompose">Decompose</button>
+        <div>
+          <button class="tool" id="b-decompose">Decompose</button>
+          <button title="Paste" class="tool" id="paste"></button>
+        </div>
         <span id="status"></span>
       </div>
     </div>
