clean up colors

--- a/index.html
+++ b/index.html
@@ -35,19 +35,20 @@
       </div>
     </div>
     <div id="end">
+      <span>messages here &rarr;</span>
       <button title="Compose" class="tool" id="compose"></button>
     </div>
     <div id="modal">
       <div id="modal-body">
         <span id="close">x</span>
         <div>
-          <button class="tool" id="b-compose">Compose</button>
+          <button class="tool" id="b-compose">Seal</button>
           <button title="Copy" class="tool" id="copy"></button>
           <button title="Download" class="tool" id="download"></button>
         </div>
         <textarea placeholder="your message to be... or not" id="area"></textarea>
         <div>
-          <button class="tool" id="b-decompose">Decompose</button>
+          <button class="tool" id="b-decompose">Unseal</button>
           <button title="Paste" class="tool" id="paste"></button>
         </div>
         <span id="status"></span>
